# thotbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/: contributing.md  renovate.json5
.github/workflows/: build.yml  codeql.yml
thotbot/: __init__.py  __main__.py  bot.py  config.py  log.py  utils.py
thotbot/assets/: README.md
thotbot/cogs/: slash_commands.py
